deploy/overlays/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  namespace: gihp4c
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: gihp4c-test-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 80
